# drl_local_planner_ros_stable_baselines

./: .gitignore  .rosinstall  README  README.md  create_path_config.sh  create_venv.sh  repos.rosinstall  repos_common.rosinstall  repos_sim.rosinstall  requirements.txt
data/evaluation_data/: test.ipynb
docker/: Dockerfile  build.yml  docker_copy_logs_from_container.sh  docker_train_pretrained_test.sh  docker_train_scratch_test.sh  train.yml  train_pretrained.yml  up.env  up.yml  up_eval.yml
docker/scripts/: build.sh  into.sh  kill.sh  save_build.sh  train.sh  train_pretrained.sh  up.sh  up_eval.sh
flatland_setup/objects/: person_two_legged.model.yaml
flatland_setup/robot/: pmb2_exec.model.yaml  (+2 more)
rl_agent/: CMakeLists.txt  package.xml
rl_bringup/: CMakeLists.txt  package.xml
rl_bringup/config/: global_costmap_params.yaml  path_config.ini  rl_common.yaml  rl_params_common.yaml  rl_params_common_pmb2.yaml  rl_params_exec.yaml  rl_params_img.yaml  rl_params_scan.yaml  rl_params_train.yaml
rl_bringup/launch/: rviz.launch  setup.launch  setup_common.launch  setup_sim.launch  setup_sim_pmb2.launch
rl_bringup/launch/sub_launch/: dummy_localization.launch  flatland.launch  move_base.launch  navigation.launch  pedestrians_only.launch  simulation.launch
rl_bringup/rviz/: robot_navigation.rviz
rl_bringup/scripts/: run_ppo_agent.sh
rl_bringup/src/: toggle_setup_init.cpp
rl_local_planner/: CMakeLists.txt  package.xml
start_scripts/: close_training_session.sh  entrypoint_ppo2.sh  ppo2_training.sh  ros.sh  tensorboard.sh  train_pmb2.sh  train_pmb2_pretrained.sh
(+64 files in other folders)
